--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,16 @@
   # We only want to run this script manually.
   on:
-    workflow_dispatch
+    workflow_dispatch:
+      inputs:
+        targetEnv:
+          type: choice
+          description: 'Target environment'
+          required: true
+          default: 'dev'
+          options:
+          - 'dev'
+          - 'test'
+          - 'prod'
 
   permissions:
     id-token: write
@@ -10,8 +20,8 @@
   # We set the target environment to dev.
   # Open the deploy-advanced.yml file to see how we can accept user input
   # instead of needing to change this file to switch environments.
-  env:
-    targetEnv: dev
+  # env:
+  #    targetEnv: dev
 
   # The overall workflow name will be Azure Bicep. This will show up in the
   # GitHub Action page.
