--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,4 +60,4 @@
           subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
           resourceGroupName: ${{ secrets.AZURE_RG }}
           template: ./InfrastructureAsCode/main.bicep
-          parameters: environment=${{ env.targetEnv }}
+          parameters: environment=${{ github.event.inputs.targetEnv }}
