--- a/.github/workflows/dotnet-deploy.yml
+++ b/.github/workflows/dotnet-deploy.yml
@@ -9,9 +9,15 @@ on:
     paths: Application/**
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+
+env:
+  registryName: 'a7ltm5uwsxhxempnpreg.azurecr.io'
+  repositoryName : 'techboost/dotnetcoreapp'
+  dockerFolderPath: 'Application/src/RazorPagesTestSample'
+  tag: ${{github.run_number}}
+
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -30,3 +36,19 @@ jobs:
 
     - name: Test
       run: dotnet test --no-build --verbosity normal ./Application/tests/RazorPagesTestSample.Tests/RazorPagesTestSample.Tests.csproj
+
+  dockerBuildPush:
+    runs-on: ubuntu-latest
+    needs: build
+    
+    steps:
+    - uses: actions/checkout@v3
+    
+    - name: Docker Login
+      run: docker login ${{ secrets.ACR_LOGIN_SERVER }} -u ${{ secrets.ACR_USERNAME }} -p ${{ secrets.ACR_PASSWORD }}
+        
+    - name: Docker Build
+      run: docker build -t ${{ env.registryName }}/${{ env.repositoryName }}:${{ env.tag }} --build-arg build_version=${{ env.tag }} ${{ env.dockerFolderPath }}
+        
+    - name: Docker Push
+      run: docker push ${{ env.registryName }}/${{ env.repositoryName }}:${{ env.tag }}
