--- a/.github/workflows/dotnet-deploy.yml
+++ b/.github/workflows/dotnet-deploy.yml
@@ -63,7 +63,7 @@ jobs:
         
     steps:
       - name: 'Login via Azure CLI'
-      - uses: azure/login@v1
+        uses: azure/login@v1
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.TENANT_ID }}
