--- a/.github/workflows/dotnet-deploy.yml
+++ b/.github/workflows/dotnet-deploy.yml
@@ -10,6 +10,10 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+permissions:
+  id-token: write
+  contents: read
+
 env:
   registryName: 'a7ltm5uwsxhxempnpreg.azurecr.io'
   appPrefix: 'a7ltm5uwsxhxe'
