--- a/.github/workflows/dotnet-deploy.yml
+++ b/.github/workflows/dotnet-deploy.yml
@@ -78,3 +78,24 @@ jobs:
         with:
           app-name: '${{ env.appPrefix }}-dev'
           images: ${{ env.registryName }}/${{ env.repositoryName }}:${{ env.tag }}
+
+  deploy-to-test:
+    runs-on: ubuntu-latest
+    needs: [dockerBuildPush, deploy-to-dev]
+    environment:
+      name: test
+      url: https://${{ env.appPrefix }}-test.azurewebsites.net/
+            
+    steps:
+      - name: 'Login via Azure CLI'
+        uses: azure/login@v1
+        with:
+            client-id: ${{ secrets.AZURE_CLIENT_ID }}
+            tenant-id: ${{ secrets.TENANT_ID }}
+            subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+            enable-AzPSSession: true
+
+      - uses: azure/webapps-deploy@v2
+        with:
+          app-name: '${{ env.appPrefix }}-dev'
+          images: ${{ env.registryName }}/${{ env.repositoryName }}:${{ env.tag }}
